tools/hrw4u/tests/data/vars/vars_size.fail.error.txt
tests/data/vars/vars_size.fail.input.txt:6:3: error: Invalid value '1234' for int8 variable 'tooBig'
   6 |    tooBig = 1234;
     |    ^
